--- a/style.css
+++ b/style.css
@@ -49,3 +49,71 @@
   width: 100vw;
   background-color: #f08a4b;
 }
+
+@media screen and (max-width : 700px){
+
+#middle {
+  display: unset;
+}
+
+#main {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  align-items: stretch;
+}
+
+#nav {
+  background-color: #4b4e6d;
+  width: 100%;
+  height : 20%;
+}
+
+#articles {
+ 
+  background-color: #6a8d92;
+  width: 100%;
+  height : 60%;
+}
+
+#ads {
+  background-color: #f2a541;
+  width: 100%;
+  height : 20%;
+}
+
+}
+
+ @media screen and (min-width:700px) and (max-width :  1100px) {
+
+  #middle {
+    display: unset;
+  }
+  #nav {
+    background-color: #4b4e6d;
+    width: 100%;
+    height : 20%;
+  }
+
+  #main {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+    align-items: stretch;
+  }
+  #articles {
+ 
+    background-color: #6a8d92;
+    width: 50%;
+    height : 80%;
+  }
+  
+  #ads {
+    background-color: #f2a541;
+    width: 50%;
+    height : 800%;
+  }
+
+} 
